<resources>
    <string name="app_name">Task3</string>
    <string name="digit_seven">7</string>
    <string name="digit_eight">8</string>
    <string name="digit_nine">9</string>
    <string name="division_char">/</string>
    <string name="digit_four">4</string>
    <string name="digit_five">5</string>
    <string name="digit_six">6</string>
    <string name="multiplication_char">*</string>
    <string name="digit_one">1</string>
    <string name="digit_two">2</string>
    <string name="digit_three">3</string>
    <string name="subtraction_char">-</string>
    <string name="digit_zero">0</string>
    <string name="point_char">.</string>
    <string name="equals_char">=</string>
    <string name="plus_char">+</string>
    <string name="ac">AC</string>
    <string name="remove_last"><![CDATA[<-]]></string>
</resources>