<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:gravity="end"
        android:textSize="24sp"
        android:layout_weight="1"
        android:textIsSelectable="true"
        android:textColor="@color/black"
        android:text="0"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <Button
                android:id="@+id/button_remove_all"
                android:layout_weight="1"
                android:onClick="btnOnClick"
                android:text="@string/ac" />
            <Button
                android:id="@+id/button_remove_last"
                android:layout_weight="1"
                android:onClick="btnOnClick"
                android:text="@string/remove_last" />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/button_digit_seven"
                android:layout_weight="1"
                android:onClick="btnOnClick"
                android:text="@string/digit_seven" />
            <Button
                android:id="@+id/button_digit_eight"
                android:layout_weight="1"
                android:onClick="btnOnClick"
                android:text="@string/digit_eight" />
            <Button
                android:id="@+id/button_digit_nine"
                android:layout_weight="1"
                android:onClick="btnOnClick"
                android:text="@string/digit_nine" />
            <Button
                android:id="@+id/button_division"
                android:layout_weight="1"
                android:onClick="btnOnClick"
                android:text="@string/division_char"/>
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/button_digit_four"
                android:layout_weight="1"
                android:onClick="btnOnClick"
                android:text="@string/digit_four"/>
            <Button
                android:id="@+id/button_digit_five"
                android:layout_weight="1"
                android:onClick="btnOnClick"
                android:text="@string/digit_five"/>
            <Button
                android:id="@+id/button_digit_six"
                android:layout_weight="1"
                android:onClick="btnOnClick"
                android:text="@string/digit_six"/>
            <Button
                android:id="@+id/button_multiplication"
                android:layout_weight="1"
                android:onClick="btnOnClick"
                android:text="@string/multiplication_char"/>
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/button_digit_one"
                android:layout_weight="1"
                android:onClick="btnOnClick"
                android:text="@string/digit_one"/>
            <Button
                android:id="@+id/button_digit_two"
                android:layout_weight="1"
                android:onClick="btnOnClick"
                android:text="@string/digit_two"/>
            <Button
                android:id="@+id/button_digit_three"
                android:layout_weight="1"
                android:onClick="btnOnClick"
                android:text="@string/digit_three"/>
            <Button
                android:id="@+id/button_subtraction"
                android:layout_weight="1"
                android:onClick="btnOnClick"
                android:text="@string/subtraction_char"/>
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/button_digit_zero"
                android:layout_weight="1"
                android:onClick="btnOnClick"
                android:text="@string/digit_zero"/>
            <Button
                android:id="@+id/button_point"
                android:layout_weight="1"
                android:onClick="btnOnClick"
                android:text="@string/point_char"/>
            <Button
                android:id="@+id/button_equals"
                android:layout_weight="1"
                android:onClick="btnOnClick"
                android:text="@string/equals_char"/>
            <Button
                android:id="@+id/button_plus"
                android:layout_weight="1"
                android:onClick="btnOnClick"
                android:text="@string/plus_char"/>
        </TableRow>
    </TableLayout>

</LinearLayout>